2005-03-04  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/installer.rb (Gem::Uninstaller::ok_to_remove):
	Reworked logic in uninstall to be intelligent about dependencies.
	We only complain about dependencies if removing a gem will cause a
	dependency error.  The uninstaller now checks for :ignore, :all
	and :executables options.

	* lib/rubygems/cmd_manager.rb (Gem::CommandManager::initialize):
	Registered Cleanup command.

	* lib/rubygems/gem_commands.rb (Gem::CleanupCommand): Added
	Cleanup command to gem.
	(Gem::UninstallCommand::initialize): Added --all, --ignore and
	--executables options to uninstall.  This helps to avoid excessive
	YESes all the time.

2005-02-28  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/remote_installer.rb
	(Gem::LocalSourceInfoCache::write_cache): Open cache file in
	binary mode.

2005-02-28  Chad Fowler  <chad@chadfowler.com>
	* lib/rubygems/config_file.rb: don't warn about not being able to
	find config file.
	* lib/rubygems/doc_manager.rb: (for DHH) don't install rdoc docs for
	* lib/rubygems/gem_commands.rb: Print which gems are updated on 'gem
	update'.  If --system is used, report that the rubygems system
	software has been updated.
	* lib/rubygems/installer.rb: Cleaned up the uninstall has_dependents
	logic and output.  It was misleading and buggy before.

2005-02-27  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/config_file.rb
	(Gem::ConfigFile::default_config_file_name): Fixed bug in finding
	home directory for the .gemrc file.

2005-02-27  Chad Fowler  <chad@chadfowler.com>

	* Released 0.8.6

	* Fixed a small bug with shebang construction

2005-02-26  Jim Weirich  <jim@weirichhouse.org>

	* Released 0.8.5

	* lib/rubygems/doc_manager.rb (Gem::DocManager::generate_rdoc):
	Removed warning about generating rdocs on gems w/o an rdoc flag.

	* lib/rubygems/gem_commands.rb
	(Gem::UpdateCommand::do_rubygems_update): Added --system option to
	update to specifically update the version of rubygems.