@@ -1,3 +1,7 @@
+2005-03-04  Chad Fowler <chad@chadfowler.com>
+	* lib/rubygems/gem_commands.rb: Small bugfix for the case when you
+	pass in a gem name (or more) to cleanup for the cleanup command.
+
 2005-03-04  Jim Weirich  <jim@weirichhouse.org>
 
 	* lib/rubygems/installer.rb (Gem::Uninstaller::ok_to_remove):
